<?xml version="1.0"?>
<package format="2">
  <name>depth_camera_tutorial</name>
  <version>1.0.0</version>
  <description>Sample package for processing 3D cameras</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
</package>
